--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1000,7 +1000,8 @@ code, pre, .cm-editor .cm-scroller {
 
 .btn:first-child {
   padding: 0;
-  width: 24px
+  /* width: 24px
+*/
 }
 
 .btn:active,
