--- a/styles/ui.css
+++ b/styles/ui.css
@@ -992,6 +992,10 @@ code, pre, .cm-editor .cm-scroller {
   display: none;
 }
 
+.cell-init {
+  background: repeating-linear-gradient( 45deg, #eaeaea80, #eaeaea8c 4px, #fff 4px, #fff 10px );
+}
+
 .path-hidden {
   display: none;
 }
