--- a/styles/ui.css
+++ b/styles/ui.css
@@ -285,7 +285,7 @@
 	width: 100%;
 	font-size: 14px;
 	min-height: 27px;
-	padding: 2px 10px;
+	/*! padding: 2px 10px; */
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
@@ -296,7 +296,7 @@
 	width: 100%;
 	font-size: 14px;
 	min-height: 27px;
-	padding: 2px 10px;
+	/*! padding: 2px 10px; */
 	margin-top: 1px;
 	margin-bottom: 1px;
 	color: rgba(55, 53, 47, 0.65);
@@ -374,8 +374,9 @@
 	align-items: center;
 	min-width: 0px;
 	height: 45px;
-	width: 100%;
+	/*! width: 100%; */
 	margin-bottom: 0px;
+	padding: 0;
 }
 
 .sidebar-option:hover {
@@ -488,10 +489,10 @@
 	flex-shrink: 0;
 	border-radius: 3px;
 	height: 24px;
-	width: 24px;
+	width: 26px;
 	padding: 0px;
 	position: relative;
-	margin-left: 10px;
+	/*! margin-left: 10px; */
 	opacity: 1;
 }
 
@@ -515,7 +516,7 @@
 	transition: background 20ms ease-in 0s;
 	cursor: pointer;
 	border-radius: 3px;
-	margin-left: 4px;
+	/*! margin-left: 4px; */
 	margin-right: 4px;
 	width: calc(100% - 8px);
 }
@@ -758,7 +759,8 @@
     transition: opacity 700ms ease 0s, color 700ms ease 0s;
     position: fixed;
     z-index: 110;
-    background: transparent;
+    background: #ffffffab;
+    border-bottom: solid #f1f1f1 2px;
 }
 
 .notion-topbar-action-buttons {
