--- a/styles/ui.css
+++ b/styles/ui.css
@@ -299,7 +299,8 @@
 	/*! padding: 2px 10px; */
 	margin-top: 1px;
 	margin-bottom: 1px;
-	color: rgba(55, 53, 47, 0.65);
+	color: rgb(77 77 77);
+	font-weight: 400;
 	height: 2em;
 }
 
@@ -324,7 +325,10 @@
 
 .notion-topbar-action-buttons > div {
 	display: flex;
+	cursor: pointer;
+	-webkit-app-region: no-drag;
 }
+
 
 
 .notion-app-inner.notion-light-theme {
@@ -343,6 +347,7 @@
     display: flex;
     flex: 1 1 0%;
     cursor: default;
+    overflow-x: hidden;
 }
 
 .notion-sidebar-container {
@@ -519,6 +524,7 @@
 	/*! margin-left: 4px; */
 	margin-right: 4px;
 	width: calc(100% - 8px);
+	-webkit-app-region: no-drag;
 }
 
 .notion-focusable .button-body {
@@ -594,13 +600,14 @@
 
 .notion-scroller.vertical {
 	padding-top: 6px;
-	padding-bottom: 20px;
+	/* padding-bottom: 20px; */
 	box-shadow: transparent 0px 0px 0px inset;
 	transition: box-shadow 300ms ease 0s;
 	z-index: 1;
 	overflow: hidden auto;
 	margin-right: 0px;
 	margin-bottom: 0px;
+	/* backdrop-filter: blur(20px); */
 }
 .notion-scroller {
   scrollbar-width: 2px;
@@ -638,7 +645,13 @@
 }
 
 .dropdown-frame {
-	border-radius: 4px; background-color: white; position: relative; max-width: calc(-24px + 100vw); box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px; overflow: hidden;
+	border-radius: 4px;
+	background: #ffffff;
+	/* backdrop-filter: blur(10px); */
+	position: relative;
+	max-width: calc(-24px + 100vw);
+	box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
+	overflow: hidden;
 }
 
 .vertical {
@@ -646,7 +659,11 @@
 }
 
 .notion-shadow {
-	padding-top: 6px; padding-bottom: 6px; box-shadow: rgba(55, 53, 47, 0.09) 0px -1px 0px; margin-top: 1px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	/* box-shadow: rgba(55, 53, 47, 0.09) 0px -1px 0px; */
+	margin-top: 1px;
+	/* backdrop-filter: blur(20px); */
 }
 
 .chevronDownRoundedThick {
@@ -748,19 +765,31 @@
 
 
 .topbar-url-container {
-	margin-left: 246px;
+	margin-left: 6em;
 }
 
 .notion-topbar {
+  width: calc(100% - 246px);
+  /* max-width: 100vw; */
+  height: 45px;
+  opacity: 1;
+  transition: opacity 700ms ease 0s, color 700ms ease 0s;
+  position: fixed;
+  z-index: 110;
+  margin-left: 246px;
+  background: #ffffffad;
+  /* filter: blur(5px); */
+  backdrop-filter: blur(10px);
+  border-bottom: solid #f1f1f1 2px;
+  -webkit-user-select: none;
+  -webkit-app-region: drag;
+}
+
+
+
+.notion-topbar-show {
+    margin-left: 0;
     width: 100%;
-    /* max-width: 100vw; */
-    height: 45px;
-    opacity: 1;
-    transition: opacity 700ms ease 0s, color 700ms ease 0s;
-    position: fixed;
-    z-index: 110;
-    background: #ffffffab;
-    border-bottom: solid #f1f1f1 2px;
 }
 
 .notion-topbar-action-buttons {
@@ -772,6 +801,7 @@
 	padding-left: 12px;
 	justify-content: space-between;
 	z-index: 101;
+	/* cursor: context-menu; */
 	height: 45px;
 	opacity: 1;
 	transition: opacity 700ms ease 0s, color 700ms ease 0s;
@@ -869,12 +899,13 @@
     z-index: 1;
     /* margin-top: 2em; */
     bottom: 0;
-    margin-top: 45px;
-    height: 100%;
-    max-height: 100%;
+    /* margin-top: 45px; */
+    height: calc(100% - 45px);
+    min-height: 100vh;
     position: relative;
     margin-left: 246px;
-    width: calc(100vw - 270px);
+    background: white;
+    width: calc(100vw - 246px);
     /* transition: all ease-in-out 0.3s; */
 }
 
@@ -901,7 +932,7 @@
 
 .notion-frame-extended {
 	margin-left: 0;
-	width: calc(100vw - 10px);
+	width: 100vw;
 }
 
 .notion-help-button.notion-focusable {
@@ -1125,6 +1156,7 @@ code, pre, .cm-editor .cm-scroller {
   transform: translateY(0rem);
   visibility: visible;
   opacity: 1;
+  backdrop-filter: blur(20px);
 }
 
 .dropdown-file {
@@ -1148,7 +1180,7 @@ code, pre, .cm-editor .cm-scroller {
 
 .cell-wrapper {
   height: auto;
-  padding: 0 84px;
+  padding: 0 5.4em 0 3.5em;
   position: relative;
   width: 100%
 }
@@ -1183,7 +1215,8 @@ code, pre, .cm-editor .cm-scroller {
 .styles-container-editor {
     max-width: 100%;
     width: 100%;
-    padding: 2em;
+    padding: 0.5em;
+    padding-right: 2em;
     padding-top: 3.5rem;
     padding-bottom: 400px;
 }
@@ -1683,6 +1716,7 @@ table {
   right: 0;
   /*! display: block; */
   position: absolute;
+  margin-top: 2px;
 }
 
 .cell-wrapper.frontend-node hr{
