modified:   styles/ui.css

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -318,9 +318,9 @@
 	justify-content: space-between;
 	align-items: center;
 	overflow: hidden;
-	height: 45px;
-	padding-left: 12px;
-	padding-right: 10px;
+	height: 40px;
+	/* padding-left: 12px; */
+	/* padding-right: 182px; */
 }
 
 .notion-topbar-action-buttons > div {
@@ -765,13 +765,13 @@
 
 
 .topbar-url-container {
-	margin-left: 6em;
+	margin-left: 1em;
 }
 
 .notion-topbar {
   width: calc(100% - 246px);
   /* max-width: 100vw; */
-  height: 45px;
+  /* height: 41px; */
   opacity: 1;
   transition: opacity 700ms ease 0s, color 700ms ease 0s;
   position: fixed;
@@ -788,7 +788,8 @@
 
 
 .notion-topbar-show {
-    margin-left: 0;
+    margin-left: auto;
+    padding-left: 5em;
     width: 100%;
 }
 
@@ -802,7 +803,7 @@
 	justify-content: space-between;
 	z-index: 101;
 	/* cursor: context-menu; */
-	height: 45px;
+	height: 35px;
 	opacity: 1;
 	transition: opacity 700ms ease 0s, color 700ms ease 0s;
 }
