--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1429,23 +1429,23 @@ p {
 }
 
 .no-kernel {
-  background-color: rgb(236, 236, 236);
-  color: rgba(55, 53, 47, 0.5);
+  background-color: rgb(78 78 78 / 54%);
+  color: var(--topbar-text-color);
 }
 
 .bad-kernel {
-  background-color: rgb(255, 226, 221);
-  color: rgb(93, 23, 21);
+  background-color: rgb(134 51 51);
+  color: var(--topbar-text-color);
 }
 
 .load-kernel {
-  background-color: rgb(255, 245, 221);
-  color: rgba(71, 71, 71, 0.792);
+  background-color: rgb(92 79 48);
+  color: var(--topbar-text-color);
 }
 
 .good-kernel {
   background-color: rgb(0 159 0 / 54%);
-  color: rgb(204 204 204);
+  color: var(--topbar-text-color);
 }
 
 .range-slider {
