--- a/styles/ui.css
+++ b/styles/ui.css
@@ -393,7 +393,7 @@
 	height: 100%;
 	transition: all ease-in-out 0.3s;
 	border-right: solid 1px var(--borders-color);
-	border-radius: 5px;
+	border-radius: 0;
 }
 
 
