--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1431,12 +1431,14 @@ a:hover {
 }
 
 h1 {
-  font-size: 2rem;
-  margin-bottom:1.25rem
+  font-size: xx-large;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: x-large;
+  font-weight: bold;
   margin-bottom:.25rem
 }
 
@@ -1445,12 +1447,14 @@ h2, h3 {
 }
 
 h3 {
-  font-size: 1.25rem;
+  font-size: large;
+  font-weight: bold;
   margin-bottom:.125rem
 }
 
 h4 {
-  font-size: 1.125rem;
+  font-size: medium;
+  font-weight: bold;
   margin-bottom:.25rem
 }
 
@@ -1459,8 +1463,12 @@ h4, p {
 }
 
 p {
-  font-size: 16px;
-  margin-bottom:.125rem
+  font-size: small;
+  margin-bottom: 0;
+  /* padding: 0; */
+  line-height: 1.2;
+  /* margin-block-start: 0; */
+  /* margin-block-end: 0; */
 }
 
 .no-kernel {
