modified:   styles/ui.css

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -8,7 +8,7 @@
   --buttons-hover: rgb(255 206 59 / 53%);
   --filter-frame: none;
   --sidebar-backround: transparent;
-  --buttons-hover-inverted: #0031c487;
+  --buttons-hover-inverted: rgb(255 206 59 / 53%);
   --background-menu: rgb(236, 236, 236);
 }
 
