--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1244,12 +1244,16 @@ code, pre, .cm-editor .cm-scroller {
   align-items: center;
   flex-direction: column-reverse;
   transform-origin: 50% top;
-  top: 45px;
+  /* top: 0; */
+  /* bottom: 0; */
   transition: all 0.1s cubic-bezier(0.16, 1, 0.5, 1);
   transform: translateY(0.5rem);
   visibility: hidden;
   opacity: 0;
   z-index: 150;
+  margin: 0;
+  padding: 0;
+  position: absolute;
 }
 
 .dropdown-kernel-show {
