--- a/styles/ui.css
+++ b/styles/ui.css
@@ -164,7 +164,7 @@ body[data-theme='dark'] {
 	display: flex;
     align-items: center;
     width: 100%;
-    font-size: 14px;
+    font-size: small;
     min-height: 27px;
     padding: 2px 10px;
     margin-top: 1px;
@@ -1366,7 +1366,7 @@ code, pre, .cm-editor .cm-scroller {
   position: relative;
   padding-left:1em;
   padding-right:1em;
-  font-size:14px;
+  font-size: small;
   background:none;
   content: attr(data-object);
 }
@@ -1628,7 +1628,7 @@ p {
 }
 
 .filename-input {
-  font-size: 14px;
+  font-size: small;
   line-height: 2em;
 }
 
@@ -1805,9 +1805,8 @@ table {
   border-radius: 3px;
   padding-left: 6px;
   padding-right: 6px;
-  font-size: 14px;
+  font-size: small;
   line-height: 120%;
-  font-weight: 500;
   margin: 0px;
   height:16px;
   background-color: rgb(236, 236, 236);
