--- a/styles/ui.css
+++ b/styles/ui.css
@@ -416,7 +416,7 @@ body[data-theme='dark'] {
 
 .notion-cursor-listener {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
     display: flex;
     flex: 1 1 0%;
@@ -1010,7 +1010,7 @@ body[data-theme='dark'] {
     /* margin-top: 45px; */
     /* height: calc(100% - 45px); */
     /* overflow-y: scroll; */
-    min-height: 100vh;
+    height: 100%;
     position: relative;
     margin-left: 246px;
     background: var(--background-frame-color);
@@ -1336,8 +1336,8 @@ code, pre, .cm-editor .cm-scroller {
 
 .styles-container-body {
   /* width: 100vw; */
-  height: 100vh;
-  /* display: flex; */
+  height: 100%;
+  display: block;
   justify-content: center;
   /* overflow: scroll; */
 }
@@ -1345,10 +1345,11 @@ code, pre, .cm-editor .cm-scroller {
 .styles-container-editor {
     /* max-width: 100%; */
     width: 100%;
+    height: 100vh;
     padding: 0.5em;
     /* padding-right: 2em; */
     padding-top: 2em;
-    padding-bottom: 400px;
+    padding-bottom: 0;
     filter: var(--filter-frame);
     overflow-y: scroll;
     /* font-size: small; */
