--- a/styles/ui.css
+++ b/styles/ui.css
@@ -40,6 +40,8 @@
   --editor-key-property: #00c;
   --editor-key-comment: #940;
   --editor-key-invalid: #f00;
+  
+  --editor-outline: #696969;
 
 
 
